# AtomicGameEngine

./: .gitignore  CMake_XCode-iOS.sh
Resources/CoreData/Materials/: DeepWater.xml  TerrainPBR.material
Resources/CoreData/PostProcess/: DOF.xml  GodRays.xml  SSAO.xml  SSGI.xml  Underwater.xml
Resources/CoreData/RenderPaths/: PBRDeferredHWDepth.xml
Resources/CoreData/Techniques/: DiffTree.xml  GrassDiff.xml  VegetationDiff.xml
Source/: CMakeLists.txt
Source/Atomic/: CMakeLists.txt
Source/Atomic/Core/: Object.cpp  Object.h  Profiler.cpp  Profiler.h  Timer.cpp
Source/Atomic/Engine/: Application.cpp  Engine.cpp  EngineConfig.cpp
Source/Atomic/Environment/: Attribute.h  Environment.cpp  FoliageSystem.cpp  FoliageSystem.h  GeomReplicator.cpp  GeomReplicator.h  ProcSky.cpp  SmoothFocus.cpp  SmoothFocus.h  StaticModelEx.cpp  StaticModelEx.h  TreeBillboardSet.cpp  TreeBillboardSet.h  Water.cpp  Water.h  Wind.cpp  Wind.h
Source/Atomic/Graphics/: Batch.cpp  Batch.h  Camera.cpp  Drawable.cpp  Drawable.h  Graphics.cpp  GraphicsDefs.h  (+3 more)
Source/AtomicGlow/: AtomicGlowApp.cpp  AtomicGlowApp.h  BakeLight.cpp  BakeLight.h  BakeMaterial.cpp  BakeMaterial.h  BakeMesh.cpp  BakeMesh.h  BakeModel.h  BakeNode.h  CMakeLists.txt  EmbreeMath.h  EmbreePrivate.h  EmbreeScene.cpp  EmbreeScene.h  GlowSettings.h  GlowTypes.h  LightMap.cpp  LightMap.h  LightMapPacker.cpp  LightMapPacker.h  LightRay.cpp  LightRay.h  ModelAOBake.cpp  ModelAOBake.h  RadianceMap.cpp  RadianceMap.h  SceneBaker.cpp  SceneBaker.h  StaticModelBaker.cpp  StaticModelBaker.h
Source/ToolCore/: CMakeLists.txt
(+41 files in other folders)
